--- a/src/main/resources/resources/lang/zh_cn.json
+++ b/src/main/resources/resources/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-    "usage":"§d用法:§a/%1 <join/leave>",
+    "usage":"§d用法:§a/%1% <join/leave>",
     "notplayer":"§c只有玩家才能执行这个指令",
     "joinedarena":"§a加入成功",
     "stillinarena":"§c加入失败，你正在地图中",
@@ -7,15 +7,15 @@
     "notinarena":"§c离开失败，你不在地图中",
     "completebridge":"§6§lVICTORY",
     "setresp":"§a重生点已设置",
-    "falldmgtip":"§c受到%1点掉落伤害",
+    "falldmgtip":"§c受到%1%点掉落伤害",
     "cantdrop":"§c你不能扔出这个物品",
     "cmddisable":"§c这个指令不能在搭路练习区域使用",
-    "prompt":"§l%1 方块/秒 | 距离 %2 | 最远距离 %3",
+    "prompt":"§l%1% 方块/秒 | 距离 %2% | 最远距离 %3%",
     "backresp":"§9回到出生点",
     "tpfailed":"§c传送失败",
     "sbtitle": "搭路练习",
-    "timeearn": "§b+%1 经验 (时长奖励)",
-    "blockearn": "§b+%1 经验 (方块放置)",
-    "levelup": "§f--------------------\n     §a升级啦!\n       §c%1 §e级\n\n§f--------------------",
+    "timeearn": "§b+%1% 经验 (时长奖励)",
+    "blockearn": "§b+%1% 经验 (方块放置)",
+    "levelup": "§f--------------------\n     §a升级啦!\n       §c%1% §e级\n\n§f--------------------",
     "cantplaceon":"§c你不能在这里放置方块!"
 }
